Remove ugly floating-point literals `0.`, `1.` or `N.`
The compiler will now require that floating points be digit '.' digit if you will be using that floating-point form.

--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -275,7 +275,7 @@ Library changes:
 
     // 0.2
     foo() {
-        return 3./2., 3\2; // 1.5, 1
+        return 3.0/2.0, 3\2; // 1.5, 1
     }
 
   Thanks to Jeremy Clifford.
